src/main/webapp/css/index.css
@import url('https://fonts.googleapis.com/css?family=Orbitron');

body {
	color: #000033;
	margin: 0px;
    background: url("../images/Concordia-Background.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#Main {
	/*background-color: rgba(175,175,175,0.1);*/
	padding: 4px 0px;
}

#header-text {
  font-family: orbitron;
  margin: 0 auto;
  position: relative;
  text-align: center;
  top: 0%;
  width: 60%;
}

#box {
  font-family: orbitron;
  margin: 0 auto;
  position: relative;
  text-align: center;
  top: 200px;
  width: 100%;
}

#inputGroup select {
	color: #000033;
	letter-spacing: 0.8px;
	border-radius: 4px;
	font-weight: bold;
	height: 40px;
    width: 250px;
    text-align: center;
    font-family: orbitron;
    font-size: 13px;
    display: block;
    border: 2px solid #444444;
    background-color: rgba(175,175,175,0.8);
    margin: 12px auto;
}

#inputGroup select:hover {

	background-color: rgba(175,175,175, 1);

} 

#inputGroup select:active {

	border: 2px solid #000000;
}

#checkbox {
	color: #000033;
	letter-spacing: 0.8px;
	border-radius: 4px;
	padding-top: 8px;
	font-weight: bold;
	height: 28px;
    width: 244px;
    font-family: orbitron;
    display: block;
    border: 2px solid #444444;
    background-color: rgba(175,175,175,0.8);
    margin: 12px auto;
}

#checkbox:hover {

	background-color: rgba(175,175,175, 1);
	cursor: pointer;

} 

#checkbox:active {

	border: 2px solid #000000;
}

.btn {

	color: #000033;
	/*background color: rgba(175,175,175,0.8);*/
	letter-spacing: 0.8px;
	border-radius: 4px;
	font-size: 15px;
	font-family: orbitron;
	font-weight: bold;
	margin-top: 97px;
	height: 40px;
	width: 100px;

}

.btn:hover {

	cursor: pointer;

}

#credits {

    position: absolute;
    right: 16px;
    top: 16px;

    text-align: center;
    font-family: orbitron;
    font-size: 18px;
    font-weight: bold;
    letter-spacing: 0.8px;
}

